feat: add resume option and footer section

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,7 @@
 }
 
 body {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -643,4 +644,15 @@ body {
             }
         }
     }
+}
+
+.footer-container {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    bottom: 0;
+    font-size: small;
+    padding: 8px;
 }
