feat: update project card view, use video instead of image

--- a/app/globals.css
+++ b/app/globals.css
@@ -472,20 +472,18 @@ body {
     overflow: auto;
 
     .project-card {
-        width: 70%;
+        width: 80%;
         height: 60%;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: row;
-        gap: 12px;
         border-radius: 8px;
-        background-color: tomato;
         color: white;
 
         .project-details {
             width: 60%;
-            height: 100%;
+            height: 120%;
             display: flex;
             align-items: flex-start;
             justify-content: space-between;
@@ -493,6 +491,7 @@ body {
             gap: 16px;
             padding: 24px 42px;
             border-radius: 8px;
+            background-color: tomato;
 
             .project-title {
                 font-size: 36px;
@@ -557,13 +556,14 @@ body {
 
         .project-thumbnail {
             width: 100%;
-            height: 120%;
+            height: 100%;
+            overflow: hidden;
+            border-radius: 0 8px 8px 0;
 
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                border-radius: 8px;
+            .project-video {
+                width: 100% !important;
+                height: 100% !important;
+                object-fit: fill;
             }
         }
     }
