--- a/app/globals.css
+++ b/app/globals.css
@@ -103,7 +103,7 @@ body {
     height: 90%;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
     overflow: auto;
 
@@ -143,7 +143,7 @@ body {
         }
 
         .summary {
-            width: 70%;
+            width: 75%;
             padding: 24px;
             line-height: 240%;
             text-align: center;
@@ -152,6 +152,7 @@ body {
             flex-direction: column;
             gap: 12px;
             text-shadow: 4px 1px 12px white;
+            letter-spacing: 1.5px;
 
             .role {
                 font-size: x-large;
