feat: update screen blocker with in dev/progress details

--- a/app/globals.css
+++ b/app/globals.css
@@ -701,12 +701,13 @@ body {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 24px;
+        gap: 4px;
         border-radius: 8px;
 
         .info {
             font-size: medium;
             font-weight: bold;
+            margin-top: 24px;
             text-shadow: 0 0 12px white;
         }
 
@@ -716,6 +717,32 @@ body {
             font-weight: bold;
             color: lime;
             text-shadow: 0 0 12px lime;
+            margin-top: 24px;
+            margin-bottom: 12px;
+        }
+
+        .progress-info {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            font-size: small;
+            font-weight: bold;
+            color: lime;
+            text-shadow: 0 0 12px lime;
+
+            .chip {
+                background-color: rgba(0, 255, 0, 0.1);
+                padding: 8px 16px;
+                border-radius: 4px;
+                cursor: pointer;
+                transition: all 0.3s ease-in-out;
+                box-shadow: 0 0 160px lime;
+
+                &:hover {
+                    transform: translateY(-3px);
+                }
+            }
         }
     }
 }
